--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="nav-button">Sign In</button>
         </nav>
         <div class="hero">
-            <div>
+            <div class="hero-content">
                 <h4 class="hero-subtitle">Bangladesh 2.0</h4>
                 <h1 class="hero-title">Idea , innovation ,<br>
                     vision and challenges in <br>New Bangladesh.</h1>
@@ -26,6 +26,66 @@
 
     </header>
     <main>
+        <!-- pillar-bd2.0 -->
+        <section class="pillar">
+            <h2 class="pillar-title">Pillars of "Bangladesh 2.0"</h2>
+        <div class="pillar-card">
+            <div class="pillar-main">
+                <img class="card-icon" src="assets/card-icon.png" alt="">
+                <h4 class="pillar-subtitle">Innovation</h4>
+                <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
+            </div>
+            <div class="pillar-main">
+                <img class="card-icon" src="assets/card-icon.png" alt="">
+                <h4 class="pillar-subtitle">Sustainability</h4>
+                <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
+            </div>
+            <div class="pillar-main">
+                <img class="card-icon" src="assets/card-icon.png" alt="">
+                <h4 class="pillar-subtitle">Infrastructure</h4>
+                <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
+            </div>
+            <div class="pillar-main">
+                <img class="card-icon" src="assets/card-icon.png" alt="">
+                <h4 class="pillar-subtitle">Empowerment</h4>
+                <p class="pillar-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos</p>
+            </div>
+        </div>
+        </section>
+        <!-- vision -->
+        <section class="vision">
+            <h1 class="vision-title">The Vision of Future</h1>
+            <p class="vision-desc">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="vision-main">
+                <div class="vision-card">
+                    <img src="assets/card-icon.png" alt="" class="vision-image">
+                    <h4 class="vision-subtitle">Digital Transformation</h4>
+                    <p class="vision-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn-primary">Learn More</button>
+                </div>
+                <div class="vision-card" >
+                    <img src="assets/card-icon.png" alt="" class="vision-image">
+                    <h4 class="vision-subtitle">Green Energy</h4>
+                    <p class="vision-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="btn-primary">Learn More</button>
+                </div>
+                <div class="vision-card">
+                    <img src="assets/card-icon.png" alt="" class="vision-image">
+                    <h4 class="vision-subtitle">Modern Infrastructure</h4>
+                    <p class="vision-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="btn-primary">Learn More</button>
+                </div>
+            </div>
+        </section>
+        <!-- Dr.younus -->
+         <section>
+            <div class="dr-younus">
+                <p class="dr-description">"Dr. Yunus completed his undergraduate studies at Dhaka University and later received a Fulbright scholarship to study economics at Vanderbilt University in the United States, where he earned his Ph.D. in 1969. He briefly taught at Middle Tennessee State University before returning to Bangladesh to head the economics department at Chittagong University.In 1976, Dr. Yunus initiated a microcredit program by lending a modest sum to a group of women in a Bangladeshi village, enabling them to start small businesses. This experiment led to the creation of Grameen Bank in 1983"</p>
+                <h3 class="dr-title">Dr. Muhammad Yunus</h3>
+                <p class="dr-sub">Chief Adviser of the People's Republic of Bangladesh</p>
+
+            </div>
+         </section>
 
     </main>
 
