--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <section>
             <h1 class="news-title">Recent News</h1>
             <p class="news-subtitle">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
-          </section>
+          
           <div>
             <div class="news-section">
             <div>
@@ -160,7 +160,9 @@
             </div>
         </div>
           </div>
-
+        </section>
+        <!-- Donate -->
+         <section><h1></h1></section>
     </main>
 
     <footer>
