--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </section>
         <!-- Dr.younus -->
-         <section>
+         <section class="dr">
             
             <div class="dr-younus">
                 <p class="dr-description">"Dr. Yunus completed his undergraduate studies at Dhaka University and later received a Fulbright scholarship to study economics at Vanderbilt University in the United States, where he earned his Ph.D. in 1969. He briefly taught at Middle Tennessee State University before returning to Bangladesh to head the economics department at Chittagong University.In 1976, Dr. Yunus initiated a microcredit program by lending a modest sum to a group of women in a Bangladeshi village, enabling them to start small businesses. This experiment led to the creation of Grameen Bank in 1983"</p>
@@ -137,10 +137,9 @@
             </div>
             <div class="news-description">
                 <h1>Bangladesh Launches New Satellite</h1>
-                <img src="assets/al-jazeera.png" alt="">
-                <p>Date: 05/01/2025 Time: 10.25 PM</p>
-                <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
-                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                <img class="news-logo" src="assets/al-jazeera.png" alt="">
+                <p class="news-date">Date: 05/01/2025 Time: 10.25 PM</p>
+                <p class="news-content">Not until the creation and maintenance of decent conditions of life for all people are recognized <br> and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</p>
                 <button class="news-btn">Read More</button>
             </div>
         </div>
@@ -149,9 +148,9 @@
             <div class="news-section">
             <div class="news-description">
                 <h1>Bangladesh Launches New Satellite</h1>
-                <img src="assets/al-jazeera.png" alt="">
-                <p>Date: 05/01/2025 Time: 10.25 PM</p>
-                <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                <img class="news-logo" src="assets/al-jazeera.png" alt="">
+                <p class="news-date">Date: 05/01/2025 Time: 10.25 PM</p>
+                <p>Not until the creation and maintenance of decent conditions of life for all people are recognized <br> and accepted as a common obligation of all people and all countries—not until then shall we,
                 with a certain degree of justification, be able to speak of humankind as civilized</p>
                 <button class="news-btn">Read More</button>
             </div>
@@ -171,7 +170,7 @@
         </div>                
             <div class="donate-box">
                 <button class="btn-donate btn-text">100 Taka</button>
-                <button class="btn-donate btn-text">200 Taka</button>
+                <button class="btn-donate btn-dn btn-text">200 Taka</button>
                 <button class="btn-donate btn-text">500 Taka</button>
                 <button class="btn-donate btn-text">1000 Taka</button>
             </div>
@@ -195,12 +194,15 @@
         
     </main>
 
-    <footer>
+    <footer class="footer-main">
         <h1 class="footer-title">Bangladesh 2.0</h1>
         <hr class="footer-hr">
-        <div class="footer-image"><img src="assets/facebook.png" alt="">
+        <div >
+        <div class="footer-image">
+            <img  src="assets/facebook.png"  alt="">
             <img src="assets/instagram.png" alt="">
             <img src="assets/x.png" alt="">
+        </div>
         </div>
 
 
